[tool.poetry]
name = "py-api-log-test"
version = "0.1.0"
description = "Build API with enough logs and tests, using Python :)"
authors = ["Cong <cong@trexanh.in>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
pytest = "^6.0.1"
requests = "^2.24.0"
flake8 = "^3.8.3"
isort = "^5.5.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
